[package]
name = "{{ project_name | replace(from=".nvim", to="") | replace(from=".", to="_") }}"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/{{ github_user }}/{{ project_name }}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
